--- a/bibles/templates/bibles/verse.html
+++ b/bibles/templates/bibles/verse.html
@@ -11,9 +11,9 @@
   </head>
 
   <body>
-    <h1>hi</h1>
-    <a href="{% url 'bibles:verse' %}">랜덤뽑기</a>
+    <h1>{{ verse_items.content }}</h1>
 
   </body>
 
 </html>
+
