--- a/bibles/templates/bibles/index.html
+++ b/bibles/templates/bibles/index.html
@@ -1,41 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'base.html' %}
+{% load django_bootstrap5 %}
+{% load static %}
+{% block content %}
+  <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="stackedCards.css"/>
-	<script src="stackedCards.js">
-  </script>
+  <img src="{% static 'images/bible.png' %}" alt="">
 
-  </head>
+  <a class="T_T" href="{% url 'bibles:verse' %}">랜덤뽑기</a>
 
-  <body>
-    <h1>hi</h1>
-    <a href="{% url 'bibles:verse' %}">랜덤뽑기</a>
-
-    <div class="mycards">
-      <ul>
-        <img src="">your content</img>
-        <li>your content</li>
-        <li>your content</li>
-        <li>your content</li>
-        <li>your content</li>
-      </ul>
-    </div>
-
-
-
-  </body>
-<script>
-var stackedCard = new stackedCards({
-	 	selector: '.stacked-cards',
-	 	layout: "fanOut",
-	 	transformOrigin: "bottom",
-	});
-
-	stackedCard.init();
-</script>
-</html>
+{% endblock content %}
