--- a/bibles/templates/bibles/verse.html
+++ b/bibles/templates/bibles/verse.html
@@ -21,29 +21,82 @@
               <p class="verse" style="font-size:14px">{{ verse_items.vers }}</p>
             </div>
           </div>
-          <a href="{% url 'bibles:index' %}" title="Button push orange" class="button btnPush btnOrange" style="width: 100%;">다시 뽑기</a>
-        </div>
-      </div>    
-    </div>
-  {% else %}
-  <div class="flip d-flex">
-    <div class="card">
-      <!-- 앞면 -->
-      {% comment %} <div class="front">
-        <img src="{% static 'images/bible.png' %}" alt="">
-      </div> {% endcomment %}
-      <!-- 뒷면 -->
-      <div class="back main_image">
-        <img src="{% static 'images/bible_back.png' %}" alt="">
-        <div class="main_image_text mt-5 text-center" style="font-size:18px">
-          <p>{{ love_items.content }}</p>
-          <p style="font-size:14px">{{ love_items.vers }}</p>
+          <a href="{% url 'bibles:index' %}" title="Button push orange" class="button btnPush btnRed" style="width: 100%;">다시 뽑기</a>
         </div>
       </div>
+      <!-- Go to www.addthis.com/dashboard to customize your tools -->
+      <div class="addthis_inline_share_toolbox_t56e text-center"></div>    
     </div>
+  {% elif request.resolver_match.url_name == 'love' %}
+  <div>
+    <div class="card1 flip-vertical-right wrapper">
+      <!-- 앞면 -->
+      <div class="front">
+        <img src="{% static 'images/bible.png' %}" alt="">
+      </div>
+      <!-- 뒷면 -->
+      <div class="back">
+        <div class="main_image">
+          <img src="{% static 'images/bible_back.png' %}" alt="">
+          <div class="main_image_text mt-5 text-center" style="font-size:18px">
+            <p class="verse">{{ love_items.content }}</p>
+            <p class="verse" style="font-size:14px">{{ love_items.vers }}</p>
+          </div>
+        </div>
+        <a href="{% url 'bibles:index' %}" title="Button push orange" class="button btnPush btnOrange" style="width: 100%;">다시 뽑기</a>
+      </div>
+    </div>
+    <!-- Go to www.addthis.com/dashboard to customize your tools -->
+    <div class="addthis_inline_share_toolbox_t56e text-center"></div>
+  </div>
+  {% elif request.resolver_match.url_name == 'wisdom' %}
+  <div>
+    <div class="card1 flip-vertical-right wrapper">
+      <!-- 앞면 -->
+      <div class="front">
+        <img src="{% static 'images/bible.png' %}" alt="">
+      </div>
+      <!-- 뒷면 -->
+      <div class="back">
+        <div class="main_image">
+          <img src="{% static 'images/bible_back.png' %}" alt="">
+          <div class="main_image_text mt-5 text-center" style="font-size:18px">
+            <p class="verse">{{ wisdom_items.content }}</p>
+            <p class="verse" style="font-size:14px">{{ wisdom_items.vers }}</p>
+          </div>
+        </div>
+        <a href="{% url 'bibles:index' %}" title="Button push orange" class="button btnPush btnOrange" style="width: 100%;">다시 뽑기</a>
+      </div>
+    </div>
+    <!-- Go to www.addthis.com/dashboard to customize your tools -->
+    <div class="addthis_inline_share_toolbox_t56e text-center"></div>
+  </div>
+  {% else %}
+  <div>
+    <div class="card1 flip-vertical-right wrapper">
+      <!-- 앞면 -->
+      <div class="front">
+        <img src="{% static 'images/bible.png' %}" alt="">
+      </div>
+      <!-- 뒷면 -->
+      <div class="back">
+        <div class="main_image">
+          <img src="{% static 'images/bible_back.png' %}" alt="">
+          <div class="main_image_text mt-5 text-center" style="font-size:18px">
+            <p class="verse">{{ comfort_items.content }}</p>
+            <p class="verse" style="font-size:14px">{{ comfort_items.vers }}</p>
+          </div>
+        </div>
+        <a href="{% url 'bibles:index' %}" title="Button push orange" class="button btnPush btnOrange" style="width: 100%;">다시 뽑기</a>    
+      </div>
+    </div>
+    <!-- Go to www.addthis.com/dashboard to customize your tools -->
+    <div class="addthis_inline_share_toolbox_t56e text-center"></div>
   </div>
   {% endif %}
     
     
+<!-- Go to www.addthis.com/dashboard to customize your tools -->
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-639882a381a3781a"></script>
 
 {% endblock content %}
