--- a/static/css/style.css
+++ b/static/css/style.css
@@ -18,7 +18,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
+    min-height: 90vh;
   }
   
   .card1 {
@@ -109,29 +109,38 @@ body {
 a,
 a:visited {
   text-decoration: none;
+  font-family: 'Nanum Gothic', sans-serif;
 }
 
 a.button {
   display: block;
   position: relative;
   float: left;
-  width: 120px;
+  width: 300px;
   padding: 0;
-  margin: 10px 20px 10px 0;
+  margin: 10px 0px 10px 0;
   font-weight: 600;
   text-align: center;
   line-height: 50px;
   color: #FFF;
-  border-radius: 5px;
+  border-radius: 20px;
   transition: all 0.2s ;
 }
 
 .btnOrange {
-  background: #ee6713;
+  background: #ee9313;
+}
+
+.btnRed {
+  background: #ee5c13;
 }
 
 .btnOrange.btnPush {
   box-shadow: 0px 5px 0px 0px #A66615;
+}
+
+.btnRed.btnPush {
+  box-shadow: 0px 5px 0px 0px #915507;
 }
 
 .btnPush:hover {
@@ -141,4 +150,59 @@ a.button {
 
 .btnOrange.btnPush:hover {
   box-shadow: 0px 0px 0px 0px #A66615;
+}
+
+h1 {
+  position: relative;
+  padding: 0;
+  margin: 0;
+  font-weight: 300;
+  font-size: 40px;
+  color: #080808;
+  -webkit-transition: all 0.4s ease 0s;
+  -o-transition: all 0.4s ease 0s;
+  transition: all 0.4s ease 0s;
+  font-size: 50px;
+  font-family: 'Song Myung', serif;
+  color: #4f2f06;
+}
+
+h1 span {
+  display: block;
+  font-size: 0.5em;
+  line-height: 1.3;
+}
+h1 em {
+  font-style: normal;
+  font-weight: 600;
+}
+
+.two h1 {
+  text-transform: capitalize;
+}
+.two h1:before {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 60px;
+  height: 2px;
+  content: "";
+  background-color: #402202;
+}
+
+.two h1 span {
+  font-size: 16px;
+  font-weight: 500;
+  text-transform: uppercase;
+  letter-spacing: 4px;
+  line-height: 3em;
+  padding-left: 0.25em;
+  color: rgba(0, 0, 0, 0.4);
+  padding-bottom: 10px;
+}
+.alt-two h1 {
+  text-align:center;
+}
+.alt-two h1:before {
+  left:50%; margin-left:-30px;
 }
