--- a/bibles/templates/bibles/verse.html
+++ b/bibles/templates/bibles/verse.html
@@ -142,8 +142,8 @@
         {
           title: '웹으로 보기',
           link: {
-            mobileWebUrl: 'http://biblejongeun-env.eba-8s3rddx2.ap-northeast-2.elasticbeanstalk.com/',
-            webUrl: 'http://biblejongeun-env.eba-8s3rddx2.ap-northeast-2.elasticbeanstalk.com/',
+            mobileWebUrl: window.location.href,
+            webUrl: window.location.href
           },
         },
       ],
