공유버튼수정

--- a/bibles/templates/bibles/verse.html
+++ b/bibles/templates/bibles/verse.html
@@ -140,10 +140,10 @@
       },
       buttons: [
         {
-          title: '웹으로 보기',
+          title: '나도 말씀 뽑아보기',
           link: {
-            mobileWebUrl: window.location.href,
-            webUrl: window.location.href
+            mobileWebUrl: 'http://biblejongeun-env.eba-8s3rddx2.ap-northeast-2.elasticbeanstalk.com',
+            webUrl: 'http://biblejongeun-env.eba-8s3rddx2.ap-northeast-2.elasticbeanstalk.com',
           },
         },
       ],
