--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,10 @@
+@font-face {
+  font-family: 'NEXON Lv1 Gothic OTF';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-04@2.1/NEXON Lv1 Gothic OTF.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
 
 body {
   background-image:url("/static/images/10.png");
@@ -206,3 +213,94 @@ h1 em {
 .alt-two h1:before {
   left:50%; margin-left:-30px;
 }
+
+.num_title {
+  font-family: 'Anton', sans-serif;
+  font-size:50px;
+  color:white;
+  position: relative;
+  top:80px;
+  
+
+}
+.korean_title {
+  font-family: 'NEXON Lv1 Gothic OTF';
+  font-size:12px;
+  color:white;
+  position: relative;
+  top:-510px;
+  text-align: center;
+  
+
+}
+
+.cross_1 {
+  background-color: white;
+  width:30px;
+  height:550px;
+  position: relative;
+  right:-185px;
+  top:-105px;
+}
+
+.cross_2 {
+  background-color: white;
+  width:220px;
+  height:30px;
+  position: relative;
+  right:-30px;
+  top:-25px;
+}
+
+.container-fixed {
+  animation-name: draw;
+  animation-duration:2s;
+  animation-duration: leaner;
+  
+  animation-direction:alternate;
+  animation-fill-mode: forwards;
+}
+
+@-webkit-keyframes draw {
+  from{
+    top:500px;
+    opacity:0;
+    
+  }
+  to{
+    top:100px;
+    opacity:1;
+    
+  }
+}
+
+.first_card {
+  -webkit-animation: flip-vertical-right 1s cubic-bezier(0.455, 0.030, 0.515, 0.955) both;
+  animation: flip-vertical-right 1s cubic-bezier(0.455, 0.030, 0.515, 0.955) both;
+}
+
+ @-webkit-keyframes first_card {
+  0% {
+    -webkit-transform: rotateY(0);
+            transform: rotateY(0);
+  }
+  100% {
+    -webkit-transform: rotateY(180deg);
+            transform: rotateY(180deg);
+  }
+}
+@keyframes first_card {
+  0% {
+    -webkit-transform: rotateY(0);
+            transform: rotateY(0);
+  }
+  100% {
+    -webkit-transform: rotateY(180deg);
+            transform: rotateY(180deg);
+  }
+}
+
+#page2{
+  display:none;
+}
+
