--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,136 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+KR:wght@500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Song+Myung&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300i,400" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="crossorigin">
+    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Gothic+A1:wght@600&display=swap" rel="stylesheet">
+    <!-- Stacked card -->
+    <link href="../dist/stackedCards.css" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link href="css/highlight.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/highlight.js/9.9.0/highlight.min.js"></script>
+    <script>
+      hljs.initHighlightingOnLoad();
+    </script>
+    <!-- Stacked card -->
     <script type="text/JavaScript" src="https://developers.kakao.com/sdk/js/kakao.min.js"></script>
+
+    <style>
+      *,
+      *:after,
+      *:before {
+        box-sizing: border-box;
+      }
+
+      body {
+        color: #444;
+      }
+
+      html {
+        height: 100%;
+      }
+
+      body {
+        font-family: "Roboto", sans-serif;
+        width: 100%;
+        height: 100%;
+        min-height: 100%;
+        margin: 0;
+        padding: 0;
+        background-color: #eee;
+        background-color: #fff;
+      }
+
+      .stacked-cards h2 {
+        text-align: center;
+        position: relative;
+        top: -20px;
+      }
+
+      .intro {
+        max-width: 600px;
+        margin: 20px auto;
+        text-align: center;
+      }
+
+      .container-fuild {
+        max-width: 80%;
+        margin: 0 auto;
+      }
+
+      .container-fixed {
+        max-width: 767px;
+        margin: 0 auto;
+        top: 200px;
+
+      }
+
+      .stacked-cards {
+        padding-top: 40px;
+        padding-bottom: 15px;
+      }
+
+      .stacked-cards-fanOut {
+        padding-bottom: 40px;
+
+      }
+
+      .stacked-cards-fanOut li img {
+        max-height: 200px;
+      }
+
+      .stacked-cards li {
+        width: 250px;
+        height: 550px;
+      }
+
+      @media (max-width: 767px) {
+        .stacked-cards li {
+          height: 180px;
+        }
+      }
+
+      .stacked-cards li {}
+
+      .stacked-cards li:nth-child(n) {
+        background-color: #e8c088;
+      }
+
+      .stacked-cards li:nth-child(2n) {
+        background-color: #89B77E;
+      }
+
+      .stacked-cards li:nth-child(3n) {
+        background-color: #C4D2D9;
+      }
+
+      .stacked-cards li:nth-child(4n) {
+        background-color: #DED5CD;
+      }
+
+      .stacked-cards li:nth-child(5n) {
+        background-color: #EED0C5;
+      }
+
+      .source {
+        margin: 25px auto;
+      }
+
+      .header {
+        margin: 0 auto;
+        padding: 25px 5px;
+        background-color: #fff;
+      }
+
+      .header img {
+        display: block;
+        margin: 0 auto;
+        max-width: 300px;
+        height: auto;
+      }
+    </style>
+
   </head>
 
   <body>
@@ -28,4 +157,5 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     {% block script %}{% endblock script %}
   </body>
+
 </html>
