--- a/bibles/templates/bibles/verse.html
+++ b/bibles/templates/bibles/verse.html
@@ -499,8 +499,8 @@
     })
   } 
  </script>
- <script src="../dist/stackedCards.min.js"></script>
- <script src="../../../src/page.js"></script>
+ <script src="/dist/stackedCards.min.js"></script>
+ <script src="/src/page.js"></script>
 <script>
   var stackedCardFanOut = new stackedCards({selector: '.stacked-cards-fanOut', layout: "fanOut", transformOrigin: "bottom"});
 
