--- a/templates/base.html
+++ b/templates/base.html
@@ -23,9 +23,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="crossorigin">
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Gothic+A1:wght@600&display=swap" rel="stylesheet">
     <!-- Stacked card -->
-    <link href="../dist/stackedCards.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="../dist/stackedCards.css"/>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <link href="css/highlight.css" rel="stylesheet">
+
     <script src="https://cdn.jsdelivr.net/highlight.js/9.9.0/highlight.min.js"></script>
     <script>
       hljs.initHighlightingOnLoad();
