--- a/templates/base.html
+++ b/templates/base.html
@@ -1,12 +1,14 @@
 {% load django_bootstrap5 %}
 {% load static %}
 <!DOCTYPE html>
+
 <html lang="en">
 
   <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; style-src 'self' 'unsafe-inline';">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Document</title>
     <!-- CSS only -->
     {% bootstrap_css %}
