--- a/templates/base.html
+++ b/templates/base.html
@@ -35,7 +35,7 @@
     </script>
     <!-- Stacked card -->
     <script type="text/JavaScript" src="https://developers.kakao.com/sdk/js/kakao.min.js"></script>
-
+    <script type="text/javascript" src="http://biblejongeun-env.eba-8s3rddx2.ap-northeast-2.elasticbeanstalk.com/src/page.js"></script>
     <style>
       *,
       *:after,
