--- a/bibles/templates/bibles/verse.html
+++ b/bibles/templates/bibles/verse.html
@@ -473,6 +473,7 @@
 <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-639882a381a3781a"></script>  
 <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
 <script type="text/javascript">
+<script type="text/javascript" src="http://biblejongeun-env.eba-8s3rddx2.ap-northeast-2.elasticbeanstalk.com/src/page.js"></script>  
   // SDK를 초기화 합니다. 사용할 앱의 JavaScript 키를 설정해 주세요.
   Kakao.init('50579c2a457cf683c245bc3bdd44f53e');
 </script>
