--- a/templates/base.html
+++ b/templates/base.html
@@ -27,6 +27,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Gothic+A1:wght@600&display=swap" rel="stylesheet">
     <!-- Stacked card -->
     <link rel="stylesheet" href="../dist/stackedCards.css"/>
+    <link rel="stylesheet" type="text/css" href="http://biblejongeun-env.eba-8s3rddx2.ap-northeast-2.elasticbeanstalk.com/dist/stackedCards.css" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 
     <script src="https://cdn.jsdelivr.net/highlight.js/9.9.0/highlight.min.js"></script>
@@ -35,7 +36,8 @@
     </script>
     <!-- Stacked card -->
     <script type="text/JavaScript" src="https://developers.kakao.com/sdk/js/kakao.min.js"></script>
-    <script type="text/javascript" src="http://biblejongeun-env.eba-8s3rddx2.ap-northeast-2.elasticbeanstalk.com/src/page.js"></script>
+    <script type="text/javascript" src="http://biblejongeun-env.eba-8s3rddx2.ap-northeast-2.elasticbeanstalk.com/src/page.js" crossorigin="anonymous"></script>
+    <script src="http://biblejongeun-env.eba-8s3rddx2.ap-northeast-2.elasticbeanstalk.com/dist/stackedCards.min.js" crossorigin="anonymous"></script>
     <style>
       *,
       *:after,
