--- a/bibles/templates/bibles/verse.html
+++ b/bibles/templates/bibles/verse.html
@@ -6,6 +6,7 @@
 {% block content %}
   <link rel="stylesheet" href="{% static 'css/style.css' %}">
   
+  
 
   
   {% if request.resolver_match.url_name == 'verse' %}
@@ -467,17 +468,15 @@
   
     
 <!-- Go to www.addthis.com/dashboard to customize your tools -->
-<script src="../../../dist/stackedCards.min.js"></script>
-
+<script src="../../dist/stackedCards.min.js"></script>
+<script src="../../src/page.js"></script>
 
 <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-639882a381a3781a"></script>  
 <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
 <script type="text/javascript">
- 
   // SDK를 초기화 합니다. 사용할 앱의 JavaScript 키를 설정해 주세요.
   Kakao.init('50579c2a457cf683c245bc3bdd44f53e');
 </script>
-
 <script>
   console.log(Kakao.isInitialized());
   function kakaoShare() {
