--- a/bibles/templates/bibles/verse.html
+++ b/bibles/templates/bibles/verse.html
@@ -468,8 +468,8 @@
   
     
 <!-- Go to www.addthis.com/dashboard to customize your tools -->
-<script src="../../dist/stackedCards.min.js"></script>
-<script src="../../src/page.js"></script>
+<script src="../static/css/stackedCards.min.js"></script>
+<script src="../static/css/page.js"></script>
 
 <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-639882a381a3781a"></script>  
 <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
